--- a/org/package.json
+++ b/org/package.json
@@ -11,6 +11,13 @@
     "@angular/forms": "~20.1.0",
     "@angular/platform-browser": "~20.1.0",
     "@angular/router": "~20.1.0",
+    "@delon/abc": "^20.0.1",
+    "@delon/acl": "^20.0.1",
+    "@delon/chart": "^20.0.1",
+    "@delon/form": "^20.0.1",
+    "@delon/theme": "^20.0.1",
+    "@delon/util": "^20.0.1",
+    "ng-alain": "^20.0.1",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -23,6 +30,7 @@
     "@angular/language-service": "~20.1.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "21.4.1",
+    "@nx/esbuild": "21.4.1",
     "@nx/eslint": "21.4.1",
     "@nx/eslint-plugin": "21.4.1",
     "@nx/js": "21.4.1",
@@ -32,10 +40,13 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.4.1",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
