--- a/org/package.json
+++ b/org/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@angular-devkit/core": "~20.1.0",
     "@angular-devkit/schematics": "~20.1.0",
+    "@angular/animations": "^20.2.4",
     "@angular/build": "~20.1.0",
     "@angular/cli": "~20.1.0",
     "@angular/compiler-cli": "~20.1.0",
