--- a/org/package.json
+++ b/org/package.json
@@ -16,6 +16,7 @@
     "@delon/chart": "^20.0.1",
     "@delon/form": "^20.0.1",
     "@delon/theme": "^20.0.1",
+    "@delon/auth": "^20.0.1",
     "@delon/util": "^20.0.1",
     "ng-alain": "^20.0.1",
     "ng-zorro-antd": "^20.2.1",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@angular-devkit/core": "~20.1.0",
     "@angular-devkit/schematics": "~20.1.0",
-    "@angular/animations": "^20.2.4",
+    "@angular/animations": "^20.1.8",
     "@angular/build": "~20.1.0",
     "@angular/cli": "~20.1.0",
     "@angular/compiler-cli": "~20.1.0",
